<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">

    <Button
        android:id="@+id/button"
        android:layout_width="178dp"
        android:layout_height="73dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:text="@string/str_mode_classique"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="178dp"
        android:layout_height="73dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/str_montre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="178dp"
        android:layout_height="73dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/Mode_devine_le_prix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/str_title"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/str_firesix"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="#2326DA"
        android:clickable="true"
        android:tint="@color/purple_200"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#2326DA"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/txt_nb_seconds"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="45dp"
        android:text="20"
        app:layout_constraintBottom_toTopOf="@+id/btn_arrow_down"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/btn_arrow_up" />

</androidx.constraintlayout.widget.ConstraintLayout>